<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Otros - Chats -->
    <item
        android:id="@+id/mnItem_Buscador"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/mnItem_Buscador_Title"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mnItem_NuevoGrupo"
        android:title="@string/mnItem_NuevoGrupo_Title"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/mnItem_NuevaDifusion"
        android:title="@string/mnItem_NuevaDifusion_Title"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/mnItem_WhatsWeb"
        android:title="@string/mnItem_WhatsWeb_Title"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/mnItem_MsnDestacados"
        android:title="@string/mnItem_MsnDestacados_Title"
        android:visible="true"
        app:showAsAction="never" />

    <!-- Otros - Estados -->
    <item
        android:id="@+id/mnItem_PrivEstados"
        android:title="@string/mnItem_PrivEstados_Title"
        android:visible="false"
        app:showAsAction="never" />

    <!-- Otros - Llamadas -->
    <item
        android:id="@+id/mnItem_BorrarLlamadas"
        android:title="@string/mnItem_BorrarLlamadas_Title"
        android:visible="false"
        app:showAsAction="never" />

    <!-- Opción Compartida entre todos los tabs - Ajustes -->
    <item
        android:id="@+id/mnItem_Ajustes"
        android:title="@string/mnItem_Ajustes_Title"
        android:visible="true"
        app:showAsAction="never" />
</menu>